--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,44 @@
- *{
+@import url('https://fonts.googleapis.com/css2?family=Cabin+Sketch&family=Monoton&family=Source+Sans+Pro&display=swap');
+
+*{
      margin: 0;
      padding: 0;
  }
 
- .container{
+ .contanier{
      height: 100vh;
      width: 100%;
-     background-image: url(/img/qingbao-meng-01_igFr7hd4-unsplash.jpg);
-     background-size: cover;
+     background-image: url(/image/certificate-border.jpg);
+     background-size: contain;
      background-position:center;
      position: relative;
+     background-repeat: no-repeat;
  }
+ .content{
+     width: 60%;
+     margin: 0 auto;
+     opacity: 50%;
+     background-color: teal;
+     height: 100%;
+     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+ }
+
+ h1{
+    font-family: 'Cabin Sketch', cursive;
+    font-size: 40px;
+    font-weight: 400;
+    margin-top: -240px;
+}
+
+h5{
+    
+    font-family: 'Source Sans Pro', sans-serif;  
+    font-size: 15px;
+    margin-top: -140px;
+}
+h3{
+
+}
