--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
  .container{
      height: 100vh;
      width: 70%;
-     background-image: url(/image/certificate-border.jpg);
+     background-image: url(/image/certificate.png);
      background-size: contain;
      background-position:center;
      background-repeat: no-repeat;
@@ -25,7 +25,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    border: 3px solid #c4beb5;
     margin-top: 5.5rem;
  } 
 
